--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://cdn.rawgit.com/utkarshkukreti/elm-remotedev/master/dist/main.js"></script>
   <title>Bookshelf</title>
 </head>
 
 <body>
   <div id="elm"></div>
-  <script src="./js/main.js"></script>
+  <script src="./js/elm.js"></script>
   <script>
     var app = Elm.Main.init({
       node: document.getElementById('elm'),
