--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     var app = Elm.Main.init({
       node: document.getElementById('elm'),
       flags: {
-        api: '/api'
+        api: 'http://localhost:3000'
       },
     });
   </script>
