--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,12 +9,12 @@
 
 <body>
   <div id="elm"></div>
-  <script src="./js/elm.js"></script>
+  <script src="assets/elm.js"></script>
   <script>
     var app = Elm.Main.init({
       node: document.getElementById('elm'),
       flags: {
-        api: 'http://localhost:3000'
+        api: 'http://localhost:8000/api'
       },
     });
   </script>
