--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,12 +9,13 @@
 
 <body>
   <div id="elm"></div>
-  <script src="assets/elm.js"></script>
+  <script src="/assets/elm.js"></script>
   <script>
     var app = Elm.Main.init({
       node: document.getElementById('elm'),
       flags: {
-        api: 'http://localhost:8000/api'
+        api: 'http://localhost:8000/api',
+        urlPrefix: 'bookshelf'
       },
     });
   </script>
